add new login, add new readers