@@ -29,15 +29,12 @@ public class CatalogBooksDaoImpl implements CatalogBooksDao {
     @Override
     public void updateBook(CatalogBooks catalogBooks) {
         currentSession().update(catalogBooks);
-
     }
-
 
     @Override
 
     public void deleteBook(int id) {
         currentSession().delete(getCatalogBooksById(id));
-
     }
 
     @Override
@@ -49,7 +46,8 @@ public class CatalogBooksDaoImpl implements CatalogBooksDao {
     public List<CatalogBooks> listCatalogBooks(Integer page) {
         Integer maxResult = 10;
         page = (page - 1) * 10;
-        List<CatalogBooks> catalogBooksList =  currentSession().createQuery("from CatalogBooks ")
+        List<CatalogBooks> catalogBooksList =  currentSession().createQuery("from CatalogBooks c where c.active = :active")
+                .setParameter("active",true)
                 .setFirstResult(page!=null?page:0)
                 .setMaxResults(maxResult!=null?maxResult:10)
                 .list();
@@ -58,16 +56,17 @@ public class CatalogBooksDaoImpl implements CatalogBooksDao {
 
     @Override
     public Long countFindBook() {
-        return (Long) currentSession().createCriteria(CatalogBooks.class).setProjection(Projections.rowCount()).uniqueResult();
+        return (Long) currentSession().createQuery("select count (*) from CatalogBooks c where c.active = true").uniqueResult();
     }
 
     @Override
     public List<CatalogBooks> listBooksByChar(String s, Integer page) {
         Integer maxResult = 10;
         page = (page - 1) * 10;
-        Query query =  currentSession().createQuery("from CatalogBooks c where c.name like :s");
+        Query query =  currentSession().createQuery("from CatalogBooks c where c.name like :s and c.active = :active");
         List<CatalogBooks> booksByName = query
                 .setParameter("s",s +"%")
+                .setParameter("active", true)
                 .setFirstResult(page!=null?page:0)
                 .setMaxResults(maxResult!=null?maxResult:10)
                 .list();
@@ -76,9 +75,8 @@ public class CatalogBooksDaoImpl implements CatalogBooksDao {
 
     @Override
     public Long countFindBookByChar(String s) {
-        Query query = currentSession().createQuery("from CatalogBooks c where c.name like :s");
-        List<CatalogBooks> booksByName = query.setParameter("s",s +"%").list();
-        return Long.valueOf(booksByName.size());
+        Query query = currentSession().createQuery("select count (*) from CatalogBooks c where c.name like :s and c.active = true");
+        return (Long) query.setParameter("s",s +"%").uniqueResult();
     }
 
     @Override
@@ -89,19 +87,19 @@ public class CatalogBooksDaoImpl implements CatalogBooksDao {
         Query query = null;
         switch (param){
             case "name": {
-                query = currentSession().createQuery("from CatalogBooks c where c.name = :name");
+                query = currentSession().createQuery("from CatalogBooks c where c.name = :name and c.active = true");
                 break;
             }
             case "author":{
-                query =  currentSession().createQuery("from CatalogBooks c where c.author.authorName = :name");
+                query =  currentSession().createQuery("from CatalogBooks c where c.author.authorName = :name and c.active = true");
                 break;
             }
             case "category":{
-                query =  currentSession().createQuery("from CatalogBooks c where c.category.categoryName = :name");
+                query =  currentSession().createQuery("from CatalogBooks c where c.category.categoryName = :name and c.active = true");
                 break;
             }
             case "invNum":{
-                query =  currentSession().createQuery("from CatalogBooks c where c.invNum = :name");
+                query =  currentSession().createQuery("from CatalogBooks c where c.invNum = :name and c.active = true");
                 List<CatalogBooks> booksByParam = query.setParameter("name", new Integer(name))
                         .setFirstResult(page!=null?page:0)
                         .setMaxResults(maxResult!=null?maxResult:10)
@@ -122,25 +120,23 @@ public class CatalogBooksDaoImpl implements CatalogBooksDao {
         Query query = null;
         switch (param){
             case "name": {
-                query = currentSession().createQuery("from CatalogBooks c where c.name = :name");
+                query = currentSession().createQuery("select count (*) from CatalogBooks c where c.name = :name and c.active = true");
                 break;
             }
             case "author":{
-                query =  currentSession().createQuery("from CatalogBooks c where c.author.authorName = :name");
+                query =  currentSession().createQuery("select count (*) from CatalogBooks c where c.author.authorName = :name and c.active = true");
                 break;
             }
             case "category":{
-                query =  currentSession().createQuery("from CatalogBooks c where c.category.categoryName = :name");
+                query =  currentSession().createQuery("select count (*) from CatalogBooks c where c.category.categoryName = :name and c.active = true");
                 break;
             }
             case "invNum":{
-                query =  currentSession().createQuery("from CatalogBooks c where c.invNum = :name");
-                List<CatalogBooks> booksByParam = query.setParameter("name", new Integer(name)).list();
-                return Long.valueOf(booksByParam.size());
+                query =  currentSession().createQuery("select count (*) from CatalogBooks c where c.invNum = :name and c.active = true");
+                return  (Long) query.setParameter("name", new Integer(name)).uniqueResult();
             }
         }
-        List<CatalogBooks> booksByParam = query.setParameter("name", name).list();
-        return Long.valueOf(booksByParam.size());
+        return (Long) query.setParameter("name", name).uniqueResult();
     }
 
     @Override
